client/styles/main.scss
/* ... */
#timeline .-previous{
  width: 20px;
  font-size: 11px;
}
#timeline .-pagination {
  padding: 3px 0px;
}

.rct-item-content{
  display: block !important;
  text-align: center !important;
}

.collection-valid-header{
    text-align: center;
    font-size: 18px;
    color: #cee3f5;
}
/****************** MULTISELECT **************************/
select.form-control.multiple-select {
  padding: 0px 1px !important;
  }
  /******************** progress bar css **********************/

  .progress {
    height: 7px!important;
  }

  .rct-scroll {
    border-right: 1px solid #ed7d31;
}

/************************************************** cesium map search box icon alignment  ****************/    

#default-fly-to svg.cesium-svgPath-svg {
   position: absolute;
  right: 27px;
  top: 80px;
  cursor: pointer;
  width: 23px;
  
}
#default-fly-to path {
  fill: #ed7d31;
}
/************************************************ mission summary upload button aligntment css *******************************/  
input#uploadFile0 {
  line-height: 25px;
  padding-left: 2px;
}
/********************************************  compass css ****************************/

.cesium-svgPath-svg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}
/****************** layers box css  *****************/
.checklist-block
{
  height:500px;
}
.popup-item.sub-nav-option {
  padding: 9px 0px 9px 28px;

}
.popup-item.sub-nav-option .checkbox-default {
  position: absolute;
  right: -79px;
  top: 12px;
}
.popup-item .checkbox-default {
    position: absolute;
    top: 7px;
    right: 16px;
    width: 50px;
    height: 19px;
}
.checkbox-default {
  width: 50px;
}

